# Trading-pattern-analysis-

./: .replit  app.py  fetch_patterns_route.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
attached_assets/: Pasted-Here-s-a-summarized-breakdown-of-everything-we-discussed-ready-for-an-AI-agent-or-coder-to-use-as-a-1744669408337.txt
static/css/: style.css
static/js/: charts.js  trading.js
templates/: admin.html  backtest_results.html  backtesting.html  edit_trade.html  fetch_data_demo.html  index.html  index_new.html  layout.html  live_trading.html  stock_detail.html  stocks.html  trade_journal.html  training.html
trading/: alpaca_api.py  indicators.py  pattern_detection.py  polygon_api.py  rl_agent.py  trading_environment.py
