[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-pattern-analysis"
version = "0.1.0"
description = "A sophisticated Flask-based trading system with ML capabilities"
requires-python = ">=3.9"

dependencies = [
    "alpaca-trade-api>=3.2.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "gymnasium>=0.26.2",
    "matplotlib>=3.10.1",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.1",
    "werkzeug>=3.1.3"
]